style: fix wrapping

--- a/styles/global.css
+++ b/styles/global.css
@@ -29,9 +29,6 @@ a:hover {
   text-decoration: underline 2px;
 }
 
-code {
-  line-break: anywhere;
-}
 code.bg {
   line-break: auto;
   background: #484848;
